# PhishGuard-VLM

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
colab/: PhishGuard_VLM_Colab.ipynb  README.md  requirements-no-torch.txt
configs/: README.md  colab_training.yaml  crawl_hard_negatives.example.json  data.yaml  default.yaml  evaluation.yaml  inference.yaml  model.yaml  prompt_injection_templates.txt  training.yaml
data_pipeline/: README.md  __init__.py
data_pipeline/collection/: __init__.py  crawl_batch.py  crawl_record_filter.py  expand_queue.py  manifest_utils.py  merge.py  stats.py
data_pipeline/crawler/: README.md  __init__.py  (+2 more)
docker/: Dockerfile  Dockerfile.gpu  README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  DATA_SOURCES.md  DESIGN_CHOICES.md  EVALUATION_PLAN.md
evaluation/: README.md  __init__.py  benchmark_paths.py  pipeline.py  threshold_tuning.py
inference/: README.md  __init__.py  aggregator.py  knowledge_fusion.py  pipeline.py  vlm_inference.py
knowledge_module/: README.md  __init__.py  cross_modal_consistency.py
models/: README.md  __init__.py  phishing_model.py
scripts/: README.md  merge_crawl_manifests.py  produce_measured_results.py  run_adversarial_eval.py  run_api.py  run_crawl.py  run_crawl_expand.py  run_eval.py  run_eval_tr_op.py  run_eval_trop.py  run_feed_fetch.py  run_inference.py  run_preprocess.py  run_train.py  tune_threshold.py  upload_to_drive.py  validate_dataset.py  validate_filter_crawl_manifest.py
tests/: README.md  conftest.py
web_app/: README.md
(+106 files in other folders)
